--- a/src/app/feature/appointment/appointments/appointments.component.html
+++ b/src/app/feature/appointment/appointments/appointments.component.html
@@ -1,1 +1,203 @@
-<p>appointments works!</p>
+<div class="row text-center my-5">
+    <div class="col-md-4">
+      <div class="btn-group">
+        <button
+          mat-flat-button color="primary"
+          mwlCalendarPreviousView
+          [view]="view"
+          [(viewDate)]="viewDate"
+          (viewDateChange)="closeOpenMonthViewDay()"
+        >
+          Previous
+        </button>
+        <button
+          mat-button
+          mwlCalendarToday
+          [(viewDate)]="viewDate"
+          (click)="updateCalenderEvents()"
+          style="border: none;"
+        >
+          Today
+        </button>
+        <button
+          mat-flat-button color="primary"
+          mwlCalendarNextView
+          [view]="view"
+          [(viewDate)]="viewDate"
+          (viewDateChange)="closeOpenMonthViewDay()"
+        >
+          Next
+        </button>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
+    </div>
+    <div class="col-md-4 text-end">
+        <button (click)="openDialog()" mat-flat-button color="primary">Create Appointment</button>
+    </div>
+  </div>
+  <br />
+  <div>
+    <mwl-calendar-month-view
+      [viewDate]="viewDate"
+      [events]="events"
+      [refresh]="refresh"
+      [cellTemplate]="customCellTemplate"
+      [openDayEventsTemplate]="customOpenDayEventsTemplate"
+      [activeDayIsOpen]="activeDayIsOpen"
+      (dayClicked)="dayClicked($event.day)"
+      (eventClicked)="handleEvent('Clicked', $event.event)"
+      (eventTimesChanged)="eventTimesChanged($event)"
+    >
+    </mwl-calendar-month-view>
+  </div>
+  
+  <!-- <br /><br /><br />
+  
+  <h3>
+    Edit events
+    <button class="btn btn-primary float-right" (click)="addEvent()">
+      Add new
+    </button>
+    <div class="clearfix"></div>
+  </h3>
+  
+  <div class="table-responsive">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Primary color</th>
+          <th>Secondary color</th>
+          <th>Starts at</th>
+          <th>Ends at</th>
+          <th>Remove</th>
+        </tr>
+      </thead>
+  
+      <tbody>
+        <tr *ngFor="let event of events">
+          <td>
+            <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="event.title"
+              (keyup)="refresh.next()"
+            />
+          </td>
+          <td>
+            <input
+              type="color"
+              [(ngModel)]="event.color.primary"
+              (change)="refresh.next()"
+            />
+          </td>
+          <td>
+            <input
+              type="color"
+              [(ngModel)]="event.color.secondary"
+              (change)="refresh.next()"
+            />
+          </td>
+          <td>
+            <input
+              class="form-control"
+              type="text"
+              mwlFlatpickr
+              [(ngModel)]="event.start"
+              (ngModelChange)="refresh.next()"
+              [altInput]="true"
+              [convertModelValue]="true"
+              [enableTime]="true"
+              dateFormat="Y-m-dTH:i"
+              altFormat="F j, Y H:i"
+              placeholder="Not set"
+            />
+          </td>
+          <td>
+            <input
+              class="form-control"
+              type="text"
+              mwlFlatpickr
+              [(ngModel)]="event.end"
+              (ngModelChange)="refresh.next()"
+              [altInput]="true"
+              [convertModelValue]="true"
+              [enableTime]="true"
+              dateFormat="Y-m-dTH:i"
+              altFormat="F j, Y H:i"
+              placeholder="Not set"
+            />
+          </td>
+          <td>
+            <button class="btn btn-danger" (click)="deleteEvent(event)">
+              Delete
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div> -->
+  
+  <ng-template #modalContent let-close="close">
+    <div class="modal-header">
+      <h5 class="modal-title">Event action occurred</h5>
+      <button type="button" class="close" (click)="close()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <div>
+        Action:
+        <pre>{{ modalData?.action }}</pre>
+      </div>
+      <div>
+        Event:
+        <pre>{{ modalData?.event | json }}</pre>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-secondary" (click)="close()">
+        OK
+      </button>
+    </div>
+  </ng-template>
+  
+  <ng-template
+    #customOpenDayEventsTemplate
+    let-events="events"
+    let-isOpen="isOpen">
+  
+    <div class="cal-open-day-events" *ngIf="isOpen">
+      <div *ngFor="let event of events" [ngClass]="event?.cssClass">
+        <span class="cal-event" [style.backgroundColor]="event.color?.primary"></span>
+        <mwl-calendar-event-title [event]="event"
+                                  view="month">
+        </mwl-calendar-event-title>
+         - {{event.start | date:'short'}}
+      </div>
+    </div>
+  
+  </ng-template>
+  
+  <ng-template #customCellTemplate let-day="day" let-locale="locale">
+    <div class="cal-cell-top custom-calender-class" [class]="day.events[0]?.cssClass">
+      <span class="cal-day-number d-block">
+        {{ day.date | calendarDate:'monthViewDayNumber':locale }}
+      </span>
+      <br>
+      <div *ngIf="day.events.length <= 3" class="mt-3">
+        <div [matTooltip]="item?.title" *ngFor="let item of day.events; let i = index" class="task-detail">
+          <span [style.color] = "item.color?.primary">{{item?.title}}</span>
+        </div>
+      </div>
+      <div *ngIf="day.events.length > 3" class="mt-3">
+        <div [matTooltip]="item?.title" *ngFor="let item of day.events; let i = index" class="task-detail">
+          <span [style.color] = "item.color?.primary" *ngIf="i < 3">{{item?.title}}</span>
+        </div>
+        <div class="task-detail text-dark font-weight-bold mt-2">{{day.events.length - 3}} more</div>
+      </div>
+    </div>
+  </ng-template>
+  
