--- a/src/app/feature/appointment/appointments/appointments.component.css
+++ b/src/app/feature/appointment/appointments/appointments.component.css
@@ -8,7 +8,26 @@ h3 {
   }
   
   .custom-calender-class{
-    overflow: hidden;
+    max-height: 110px;
+    height: 110px;
+    overflow-y: auto;
+    padding-bottom: 10px;
+  }
+
+  .fancy-scrollbar::-webkit-scrollbar {
+    width: 7px;
+    height: 10px;  
+  }
+  
+  .fancy-scrollbar::-webkit-scrollbar-track {
+    background: rgba(245, 245, 250, 0.4);
+    overflow: auto;
+  }
+  
+  .fancy-scrollbar::-webkit-scrollbar-thumb {
+    background: #979797;
+    overflow: auto;
+    border-radius: 100px;
   }
   
   .cal-header{
@@ -63,6 +82,7 @@ h3 {
     text-overflow: ellipsis;
     padding: 0px 5px;
     max-width: 110px;
+    text-transform: capitalize;
   }
   
   
