--- a/src/app/feature/appointment/appointments/view-appointment/view-appointment.component.html
+++ b/src/app/feature/appointment/appointments/view-appointment/view-appointment.component.html
@@ -6,7 +6,7 @@
         </tr>
         <tr>
             <td class="pe-5">Last Name: </td>
-            <td style="text-transform: capitalize;">{{appointMent.firstName}}</td>
+            <td style="text-transform: capitalize;">{{appointMent.lastName}}</td>
         </tr>
         <tr>
             <td class="pe-5">Email: </td>
