--- a/src/app/feature/appointment/appointments/appointments.component.html
+++ b/src/app/feature/appointment/appointments/appointments.component.html
@@ -8,10 +8,10 @@
         </select>
       </mat-form-field>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 text-start text-md-center">
       <h3>Total Appoinment: {{count}}</h3>
     </div>
-    <div class="col-md-4 text-end">
+    <div class="col-md-4 text-start text-md-end">
         <button (click)="openDialog()" mat-flat-button color="primary">Create Appointment</button>
     </div>
   </div>
